<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".info.Marshak">

    <Button
        android:id="@+id/back4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/btns"
        android:textColor="@color/white"
        android:fontFamily="@font/hachimarupop_regular"
        android:onClick="goBackChoosing"
        android:text="@string/btnBack"
        app:cornerRadius="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/choose2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:onClick="startPlay"
        android:text="@string/btnChoose"
        android:textColor="@color/white"
        app:cornerRadius="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2sp" />

    <ImageView
        android:id="@+id/luzha2"
        style="@style/luzha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/bunin_name2"
        android:layout_width="152dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marshak"
        app:srcCompat="@drawable/bunin_text" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="353dp"
        android:layout_height="327dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/unfo_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="145dp"
        android:layout_height="29dp"
        android:fontFamily="@font/hachimarupop_regular"
        android:text="@string/btnMarshak"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bunin_name2"
        app:layout_constraintEnd_toEndOf="@+id/bunin_name2"
        app:layout_constraintStart_toStartOf="@+id/bunin_name2"
        app:layout_constraintTop_toTopOf="@+id/bunin_name2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/marshak"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/marshak"
        android:background="@drawable/black_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/biografi"
        android:layout_width="313dp"
        android:layout_height="258dp"
        android:fontFamily="@font/hachimarupop_regular"
        android:text="@string/bioMarshak"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>