<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="456dp"
        android:layout_height="797dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/luzha" />

    <Button
        android:id="@+id/button7"
        android:layout_width="246dp"
        android:layout_height="86dp"
        android:layout_marginTop="308dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:onClick="choosingLiterators"
        android:text="@string/btnPlay"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:cornerRadius="7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/obvodka"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="202dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:onClick="openSettings"
        android:text="@string/btnSettings"
        android:textColor="@color/white"
        app:cornerRadius="7sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:strokeColor="@color/obvodka"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:text="@string/btnExit"
        android:textColor="@color/white"
        app:cornerRadius="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/obvodka"
        app:strokeWidth="2sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="341dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/pero" />

</androidx.constraintlayout.widget.ConstraintLayout>