<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".StartPlay">

    <Button
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:onClick="goBackMarshak"
        android:text="@string/btnBack"
        app:cornerRadius="7sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2sp" />

    <Button
        android:id="@+id/dalee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:onClick="toQuestions"
        android:text="К вопросам"
        android:textColor="@color/white"
        app:cornerRadius="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="2sp" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="412dp"
        android:layout_height="451dp"
        android:layout_marginBottom="288dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="336dp"
        android:layout_height="113dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/dobro" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="368dp"
        android:layout_height="257dp"
        android:layout_marginBottom="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/unfo_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="333dp"
        android:layout_height="99dp"
        android:fontFamily="@font/hachimarupop_regular"
        android:gravity="center_horizontal"
        android:text="@string/titleMarshak"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="261dp"
        android:layout_height="217dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/hachimarupop_regular"
        android:text="@string/titleM2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/dopInfo"
        android:layout_width="166dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/btns"
        android:fontFamily="@font/hachimarupop_regular"
        android:text="@string/voronezh"
        app:cornerRadius="7sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.402"
        app:strokeWidth="2sp" />

</androidx.constraintlayout.widget.ConstraintLayout>